# STRANNIK

./: .gitignore  CLI_FLAGS.md  Makefile  PIPELINE_CLI.md  README.md  pyproject.toml  requirements.txt
examples/: run_demo.py
localizer/: __init__.py  __main__.py  app.py  config.py  contracts.py  dem.py  profile.py  scoring.py  search.py  visualization.py
results_test/: summary.csv  summary.json
results_test/datasets/speed_20_duration_100_frequency_10_straight/: heights.txt  true_path.npz
results_test/datasets/speed_20_duration_100_frequency_10_turn/: heights.txt  localizer_input.json  true_path.npz
results_test/datasets/speed_20_duration_100_frequency_1_straight/: heights.txt  true_path.npz
results_test/datasets/speed_20_duration_100_frequency_1_turn/: heights.txt  initial_state.json  true_path.npz
results_test/datasets/speed_20_duration_100_frequency_3_straight/: heights.txt  true_path.npz
results_test/datasets/speed_20_duration_100_frequency_3_turn/: heights.txt  localizer_input.json  true_path.npz
results_test/datasets/speed_20_duration_100_frequency_7_straight/: heights.txt  localizer_input.json  true_path.npz
results_test/datasets/speed_20_duration_100_frequency_7_turn/: heights.txt  true_path.npz
results_test/datasets/speed_20_duration_200_frequency_10_straight/: heights.txt  (+3 more)
terrain_nav/: __init__.py  __main__.py  cli.py  config.py  dem.py  nmea.py  profile.py  scoring.py  search.py  simulator.py  visualization.py
tests/: test_dem_interpolation.py  test_nmea.py  test_profile.py  test_scoring.py  test_search_synthetic.py  test_simulator.py
(+401 files in other folders)
